# jitana-python

include/jitana/util/: jdwp.hpp
include/python/: pyconfig.h
lib/jitana/util/: jdwp.cpp
tools/jitana-python/: CMakeLists.txt  main.cpp
